<resources>
    <string name="str_app_name">Go!Flower</string>
    <string name="pic_ready_flower">Ready Flower</string>
    <string name="btn_start">Start Game</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_exit">Exit</string>
    <string name="pic_ready_wall">Ready Wall</string>
    <string name="pic_ready_banana">Ready Banana</string>
    <string name="pic_ready_title">Ready Title</string>
    <string name="btn_help">Help</string>
    <string name="pic_help">Help</string>
    <string name="pic_running_state1">State1_maze</string>
    <string name="str_help_addfruit">Add Fruit</string>
    <string name="str_help_minusfruit">Minus Fruit</string>
    <string name="str_help_other">Other</string>
    <string name="str_help_skill">Skill</string>
    <string name="str_help_enemy">Enemy</string>
    <string name="str_volumn">Volumn</string>
    <string name="str_vibrate">Vibrate</string>
    <string name="str_vibrate_pref">VibratePref</string>
    <string name="str_game_over">Game Over</string>
    <string name="str_game_over_score">Score</string>
    <string name="str_best">Best：</string>
    <string name="str_ready">Ready</string>
</resources>